deploy/deployment_service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pn-deployment
  labels:
    owner: pn
    app: kubernetes-hw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pn-kubernetes-hw
  template:
    metadata:
      labels:
        app: pn-kubernetes-hw
    spec:
      containers:
        - name: kubernetes-hw-container
          image: micpn.azurecr.io/kuberneteshw:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
      imagePullSecrets:
        - name: registry-secret


---
apiVersion: v1
kind: Service
metadata:
  name: pn-service
  labels:
    owner: pn
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
  selector:
    app: pn-kubernetes-hw
